add keyboard avoiding library

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,7 @@ target 'SkyWallet' do
   pod 'Masonry', '~>1.1.0'
   pod 'YBUtils', '~>0.1.0'
   pod 'ReactiveObjC', '~>3.1.0'
+  pod 'IQKeyboardManager'
 
   target 'SkyWalletTests' do
     inherit! :search_paths
