--- a/ios/SkyWallet/Info.plist
+++ b/ios/SkyWallet/Info.plist
@@ -49,5 +49,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>The camera is used to scan QR code</string>
 </dict>
 </plist>
